--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : Parker Ashworth
 description              : Parker Ashworth - Projects and CV 
-baseurl                  : "" # Set this to your repo name 
+baseurl                  : "" fa25-portfolio-pa367
 
 # Theme and Style
 theme: jekyll-theme-minimal
